fix: :art: fixed intro section on mobile device for site

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -4,6 +4,7 @@
 
 /* shadcnUI */
 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -50,6 +51,7 @@
     --ring: 212.7 26.8% 83.9;
   }
 }
+
 
 
 @layer base {
@@ -120,70 +122,5 @@ body {
     .wrapper > * {
       grid-column: narrow;
     }
-  }
-
-  @keyframes fill-text {
-    to {
-      --progress: 100%;
-    }
-  }
-
-  @keyframes parallax-movement {
-    to {
-      transform: translateY(var(--movement));
-    }
-  }
-
-  /* The @property tells the browser what type this variable is,
-    a percentage in our case. If we would not add that here, the
-    browser would not be able to animate it from 0% to 100%.
-  */
-  @property --progress {
-    syntax: '<percentage>';
-    inherits: false;
-    initial-value: 0%;
-  }
-}
-
-@layer components {
-  .reveal-text {
-    --faded-color: #ccc;
-    --higlighted-color: #111;
-    /* Compared to the video, I updated this article to reflect
-       a solution that's so much easier. Creating a single gradient
-       with two colors, and then animating the starting/end point of
-       the two colors with a CSS variable --progress. CSS @property
-       makes this so much easier for us now.
-    */
-    --progress: 0%;
-    background-image: linear-gradient(
-      to right,
-      var(--higlighted-color),
-      var(--higlighted-color) var(--progress),
-      var(--faded-color) var(--progress),
-      var(--faded-color)
-    );
-    background-clip: text;
-    background-repeat: no-repeat;
-    color: transparent;
-    display: inline;
-    animation: fill-text linear both;
-    animation-timeline: --reveal-wrapper;
-    animation-range: entry 200% cover 80%;
-  }
-
-  /* .parallax-image {
-    transform: translateY(0px);
-    animation: parallax-movement linear both;
-    animation-timeline: --parallax-wrapper;
-    animation-range: entry 25% cover 80%;
-  } */
-
-}
-
-
-@keyframes loop {
-  to {
-    offset-distance: 100%;
   }
 }
